html change name
change name

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                     <a class="text-white" href="#">Schedule</a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a class="text-white" href="./HWpart2.html">Homework</a>
+                                    <a class="text-white" href="./index2.html">Homework</a>
                                 </li>
                             </ol>
                         </nav>
