--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb pt-2">
                             <li class="breadcrumb-item">
-                                    <a class="text-white" href="./HWpart1.html">Attedance</a>
+                                    <a class="text-white" href="./index.html">Attedance</a>
                                 </li>
                                 <li class="breadcrumb-item">
                                     <a class="text-white" href="#">Schedule</a>
